@@ -1,3 +1,9 @@
+2001-04-19  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/Makefile.am: add.
+
+	* bonobo/libbonoboui-2.0.pc.in: add.
+
 2001-04-18  Michael Meeks  <michael@ximian.com>
 
 	* tests/Makefile.am: upd.
